# Anti-caching-Memcached

./: .gitignore  README-forMem.md  README.md  assoc.c  cache.c  config.cfg  configure.ac  crawler.c  extstore.c  extstore.h  insert_cont.sh  items.c  items.h  memcached.c  memcached.h  newReadMe.md  proto_text.c  proto_text.h  slab_automove_extstore.c  slab_automove_extstore.h  slabs.c  slabs.h  storage.c  storage.h  thread.c  trace.h
memcached_client/: CMakeLists.txt  cache_replace.c  killMem.sh  main.cpp  nvm_test.cpp  test.c  ycsb.cpp
memcached_client/workloads/: gen_workload.py  generate_all_workloads.sh
memcached_client/workloads/YCSB/workloads/: workloada  workloada2  workloada3  workloadb  workloadb2  workloadb3  workloadc  workloadc2  workloadc3  workloadd  workloadd3  workloade  workloade2  workloade3  workloadf  workloadg
test/: CMakeLists.txt  testLock.c
